--- a/docker/justfile
+++ b/docker/justfile
@@ -4,7 +4,8 @@
 
 # Run a Zenoh router
 router:
-   ros2 run rmw_zenoh_cpp rmw_zenohd
+   ZENOH_ROUTER_CONFIG_URI=/home/ubuntu/container_data/zenoh-router.json5 \
+      ros2 run rmw_zenoh_cpp rmw_zenohd
 
 # Launch Neobotix ROX simulation
 rox_simu:
@@ -16,7 +17,7 @@ rox_nav2:
 
 # Launch RViz with Nav2 configuration for Neobotix ROX
 rviz_nav2:
-   ros2 launch nav2_bringup rviz_launch.py
+   ros2 launch nav2_bringup rviz_launch.py rviz_config:=/home/ubuntu/container_data/rmw_zenoh_demo.rviz
 
 
 ###
