--- a/container_volumes/robot_container/zenoh-router.json5
+++ b/container_volumes/robot_container/zenoh-router.json5
@@ -359,42 +359,43 @@
   // /// will put a message into 1/my/keyexpr. Same applies to all other operations within this session.
   // namespace: "my/namespace",
 
-  //  /// The downsampling declaration.
-  //  downsampling: [
-  //    {
-  //      /// Optional Id, has to be unique
-  //      "id": "wlan0egress",
-  //      /// Optional list of network interfaces messages will be processed on, the rest will be passed as is.
-  //      /// If absent, the rules will be applied to all interfaces. An empty list is invalid.
-  //      interfaces: [ "wlan0" ],
-  //      /// Optional list of link protocols. Transports with at least one of these links will have their messages filtered.
-  //      /// If absent, the rules will be applied to all transports. An empty list is invalid.
-  //      link_protocols: [ "tcp", "udp", "tls", "quic", "ws", "serial", "unixsock-stream", "unixpipe", "vsock"],
-  //      /// Optional list of data flows messages will be processed on ("egress" and/or "ingress").
-  //      /// If absent, the rules will be applied to both flows.
-  //      flows: ["ingress", "egress"],
-  //      /// List of message type on which downsampling will be applied. Must not be empty.
-  //      messages: [
-  //        /// Publication (Put and Delete)
-  //        "push",
-  //        /// Get
-  //        "query",
-  //        /// Queryable Reply to a Query
-  //        "reply"
-  //      ],
-  //      /// A list of downsampling rules: key_expression and the maximum frequency in Hertz
-  //      rules: [
-  //        { key_expr: "demo/example/zenoh-rs-pub", freq: 0.1 },
-  //      ],
-  //    },
-  //  ],
+  // /// The downsampling declaration.
+  // downsampling: [
+  //   {
+  //     /// Optional Id, has to be unique
+  //     // "id": "wlan0egress",
+  //     /// Optional list of network interfaces messages will be processed on, the rest will be passed as is.
+  //     /// If absent, the rules will be applied to all interfaces. An empty list is invalid.
+  //     // interfaces: [ "wlan0" ],
+  //     /// Optional list of link protocols. Transports with at least one of these links will have their messages filtered.
+  //     /// If absent, the rules will be applied to all transports. An empty list is invalid.
+  //     // link_protocols: [ "tcp", "udp", "tls", "quic", "ws", "serial", "unixsock-stream", "unixpipe", "vsock"],
+  //     /// Optional list of data flows messages will be processed on ("egress" and/or "ingress").
+  //     /// If absent, the rules will be applied to both flows.
+  //     flows: ["ingress", "egress"],
+  //     /// List of message type on which downsampling will be applied. Must not be empty.
+  //     messages: [
+  //       /// Publication (Put and Delete)
+  //       "push",
+  //       /// Get
+  //       "query",
+  //       /// Queryable Reply to a Query
+  //       "reply"
+  //     ],
+  //     /// A list of downsampling rules: key_expression and the maximum frequency in Hertz
+  //     rules: [
+  //       // { key_expr: "demo/example/zenoh-rs-pub", freq: 0.1 },
+  //       { key_expr: "*/camera/image_raw/**", freq: 1 },
+  //     ],
+  //   },
+  // ],
 
-  //  /// Configure access control (ACL) rules
-  //  access_control: {
+  // /// Configure access control (ACL) rules
+  // access_control: {
   //   /// [true/false] acl will be activated only if this is set to true
-  //   "enabled": false,
+  //   "enabled": true,
   //   /// [deny/allow] default permission is deny (even if this is left empty or not specified)
-  //   "default_permission": "deny",
+  //   "default_permission": "allow",
   //   /// Rule set for permissions allowing or denying access to key-expressions
   //   "rules":
   //   [
@@ -407,21 +408,9 @@
   //         "liveliness_token", "liveliness_query", "declare_liveliness_subscriber",
   //       ],
   //       "flows":["egress","ingress"],
-  //       "permission": "allow",
+  //       "permission": "deny",
   //       "key_exprs": [
-  //         "test/demo"
-  //       ],
-  //     },
-  //     {
-  //       "id": "rule2",
-  //       "messages": [
-  //         "put", "delete", "declare_subscriber",
-  //         "query", "reply", "declare_queryable",
-  //       ],
-  //       "flows":["ingress"],
-  //       "permission": "allow",
-  //       "key_exprs": [
-  //         "**"
+  //         "*/camera/image_raw/**"
   //       ],
   //     },
   //   ],
@@ -435,49 +424,21 @@
   //       /// Id has to be unique within the subjects list
   //       "id": "subject1",
   //       /// Subjects can be interfaces
-  //       "interfaces": [
-  //         "lo0",
-  //         "en0",
-  //       ],
+  //       //"interfaces": [
+  //       //  "lo0",
+  //       //  "en0",
+  //       //],
   //       /// Subjects can be cert_common_names when using TLS or Quic
-  //       "cert_common_names": [
-  //         "example.zenoh.io"
-  //       ],
+  //       //"cert_common_names": [
+  //       //  "example.zenoh.io"
+  //       //],
   //       /// Subjects can be usernames when using user/password authentication
-  //       "usernames": [
-  //         "zenoh-example"
-  //       ],
+  //       //"usernames": [
+  //       //  "zenoh-example"
+  //       //],
   //       /// This instance translates internally to this filter:
   //       /// (interface="lo0" && cert_common_name="example.zenoh.io" && username="zenoh-example") ||
   //       /// (interface="en0" && cert_common_name="example.zenoh.io" && username="zenoh-example")
-  //     },
-  //     {
-  //       "id": "subject2",
-  //       "interfaces": [
-  //         "lo0",
-  //         "en0",
-  //       ],
-  //       "cert_common_names": [
-  //         "example2.zenoh.io"
-  //       ],
-  //       /// This instance translates internally to this filter:
-  //       /// (interface="lo0" && cert_common_name="example2.zenoh.io") ||
-  //       /// (interface="en0" && cert_common_name="example2.zenoh.io")
-  //     },
-  //     {
-  //       "id": "subject3",
-  //       /// An empty subject combination is a wildcard
-  //     },
-  //     {
-  //       "id": "subject4",
-  //      /// link protocols can also be used to identify transports to filter messages on.
-  //      /// If absent, the rules will be applied to all transports. An empty list is invalid.
-  //      link_protocols: [ "tcp", "udp", "tls", "quic", "ws", "serial", "unixsock-stream", "unixpipe", "vsock"],
-  //      /// ZIDs can also be used to identify transports to filter messages on.
-  //      /// NOTE: ZID is not backed by an authentication mechanism, it can only be trusted for ACL if it is
-  //      ///       dynamically added/removed by eventual dedicated Zenoh mechanisms when transports are opened/closed.
-  //      ///       If managed manually in ACL config, can be useful for prototyping but should not be used in production!
-  //      zids: ["38a4829bce9166ee"],
   //     },
   //   ],
   //   /// The policies list associates rules to subjects
@@ -489,14 +450,10 @@
   //         "id": "policy1",
   //         /// Rules and Subjects are identified with their unique IDs declared above
   //         "rules": ["rule1"],
-  //         "subjects": ["subject1", "subject2"],
-  //      },
-  //      {
-  //         "rules": ["rule2"],
-  //         "subjects": ["subject3", "subject4"],
+  //         "subjects": ["subject1"],
   //      },
   //   ]
-  //},
+  // },
 
   //  low_pass_filter: [
   //    {
