--- a/docker-compose-common-shm.yaml
+++ b/docker-compose-common-shm.yaml
@@ -21,6 +21,11 @@ services:
     networks:
       sim_network_2:
         ipv4_address: 172.2.0.2
+    # By default, Ubuntu supports 8192 KiB, which is not enough for Zenoh shared memory
+    ulimits:
+      memlock:
+        soft: -1  # "unlimited"
+        hard: -1  # "unlimited"
 
   # Controller container with a common shared memory volume
   control-shm:
@@ -41,7 +46,11 @@ services:
     networks:
       sim_network_2:
         ipv4_address: 172.2.0.3
-
+    # By default, Ubuntu supports 8192 KiB, which is not enough for Zenoh shared memory
+    ulimits:
+      memlock:
+        soft: -1  # "unlimited"
+        hard: -1  # "unlimited"
 
 networks:
   # Custom bridge network with a specific subnet
